[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nazuna"
version = "0.0.1"
description = "Utility functions."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "CookieBox26", email = "cookie-box@cookie-box.info" },
]
dependencies = [
    "numpy",
    "pandas",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
GitHub = "https://github.com/CookieBox26/nazuna"

[project.optional-dependencies]
test = [
    "pytest",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings-python",
]
