[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nazuna"
version = "0.0.1"
description = "Utility functions for time-series data analysis"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "CookieBox26", email = "cookie-box@cookie-box.info" },
]
dependencies = [
  "toml",
  "numpy",
  "pandas",
  "matplotlib",
  "statsmodels",
  "optuna",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
torch-cpu = [
  "torch>=2.0.0",
]
test = [
  "pytest",
  "ruff",
]
docs = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings-python",
]

[project.urls]
GitHub = "https://github.com/CookieBox26/nazuna"
Documentation = "https://nazuna.readthedocs.io/en/latest/"

[tool.hatch.build.targets.wheel]
artifacts = ["nazuna/datasets/**/*.csv"]

[tool.ruff.lint]
select = ["F401"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
  "slow: time-consuming tests"
]
